syntax = "proto3";

package greet;
option go_package="./greet/greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetingRequest {
    Greeting greeting = 1;
}

message GreetingResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

message EveryoneGreetRequest {
    Greeting greeting = 1;
}

message EveryoneGreetResponse {
    string result = 1;
}

message GreetingWithDeadlineRequest {
    Greeting greeting = 1;
}

message GreetingWithDeadlineResponse {
    string result = 1;
}

service GreetService{
    // Unary
    rpc Greet (GreetingRequest) returns (GreetingResponse) {};
    // Streaming Server
    rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};
    // Streaming Client
    rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse) {};
    // Bidirectional 
    rpc EveryoneGreet (stream EveryoneGreetRequest) returns (stream EveryoneGreetResponse) {};
    // Unary with Deadline
    rpc GreetDeadline (GreetingWithDeadlineRequest) returns (GreetingWithDeadlineResponse) {};
}